Huge refactor. Rename Plaintext*2 classes and adjust the code for that change. Flatten security-domain to gain more control over the modules building order.