@@ -1,35 +1,38 @@
 package com.jrobertgardzinski.security.application.factory;
 
-import com.jrobertgardzinski.password.policy.domain.PasswordPolicyPort;
-import com.jrobertgardzinski.security.domain.vo.*;
-import io.vavr.control.Try;
+import com.jrobertgardzinski.security.domain.factory.PlaintextPasswordFactory;
+import com.jrobertgardzinski.security.domain.factory.Validate;
+import com.jrobertgardzinski.security.domain.vo.Email;
+import com.jrobertgardzinski.security.domain.vo.PlaintextPassword;
+import com.jrobertgardzinski.security.domain.vo.UserRegistration;
 
+import java.util.Collections;
 import java.util.List;
 
 public class RegisterFactory {
 
-    private final PasswordPolicyPort passwordPolicy;
+    private final PlaintextPasswordFactory plaintextPasswordFactory;
 
-    public RegisterFactory(PasswordPolicyPort passwordPolicy) {
-        this.passwordPolicy = passwordPolicy;
+    public RegisterFactory(PlaintextPasswordFactory plaintextPasswordFactory) {
+        this.plaintextPasswordFactory = plaintextPasswordFactory;
     }
 
-    public UserRegistration create(String email, String password) throws UserRegistrationValidationException {
-        Try<Email> emailTry = Try.of(() -> new Email(email));
-        Try<PlaintextPassword> passwordTry = Try.of(() -> new PlaintextPassword(password));
+    public UserRegistration create(String email, String plaintextPassword) throws UserRegistrationValidationException {
+        Validate<Email> emailValidate = new Validate<>(() -> new Email(email));
+        Validate<PlaintextPassword> plaintextPasswordValidate = new Validate<>(() -> plaintextPasswordFactory.create(plaintextPassword));
 
-        List<String> emailErrors = emailTry.isFailure()
-                ? List.of(emailTry.getCause().getMessage())
-                : List.of();
+        List<String> emailErrors = emailValidate.isFailure()
+                ? List.of(emailValidate.getExceptionMessage())
+                : Collections.emptyList();
 
-        List<String> passwordErrors = passwordTry.isFailure()
-                ? List.of(passwordTry.getCause().getMessage())
-                : passwordPolicy.validate(passwordTry.get());
+        List<String> passwordErrors = plaintextPasswordValidate.isFailure()
+                ? List.of(plaintextPasswordValidate.getExceptionMessage())
+                : Collections.emptyList();
 
         if (!emailErrors.isEmpty() || !passwordErrors.isEmpty()) {
             throw new UserRegistrationValidationException(emailErrors, passwordErrors);
         }
 
-        return new UserRegistration(emailTry.get(), passwordTry.get());
+        return new UserRegistration(emailValidate.getResult(), plaintextPasswordValidate.getResult());
     }
 }
